ecmascript/parser/tests/test262-error-references/fail/8a4f56aa3f296bd0.js.stderr
error: Expected a binary digit
 --> $DIR/tests/test262-parser/fail/8a4f56aa3f296bd0.js:1:3
  |
1 | 0B
  |   ^

